# ai-pr-review-agent

./: .env.example  .gitignore  README.md  README_cn.md  pyproject.toml
.github/workflows/: ai-review.yml
configs/: default.yml
docs/: agent-harness-design.md  agent-harness-design_cn.md  github-actions.md  github-actions_cn.md  sandbox-security.md  sandbox-security_cn.md  verification-evaluation.md  verification-evaluation_cn.md  version2-design.md  version2-design_cn.md  version2_1_design.md  version2_1_design_cn.md
evaluation/: README.md  cases.jsonl  live_e2e_cases.jsonl  pr_cases.jsonl  pr_predictions.example.jsonl  runnable_pr_cases.jsonl  v2_1_summary.md  v2_1_summary_cn.md  verification_cases.jsonl
examples/external_repo_github_action/: ai-review.yml
examples/local_git_diff/: review_report.md  review_result.json
examples/octocat_commit/: review_report.md  review_result.json
src/pr_agent/: __init__.py  cli.py  (+2 more)
tests/: test_changeset_loader.py  test_diff_parser.py  test_env.py  test_evaluation_dataset.py  test_evaluation_runner.py  test_evidence_adjudicator.py  test_filters.py  test_full_diff_parser.py  test_general_reviewer.py  test_github_actions.py  test_github_client_comments.py  test_github_comments.py  test_github_models.py  test_live_e2e_runner.py  test_llm_json.py  test_llm_verifier.py  test_multi_agent_reviewer.py  test_pr_url.py  test_renderer.py  test_sandbox_tools.py  test_schema.py  test_static_verification_tools.py  test_target_parser.py  test_tool_policy.py  test_verification_executor.py  test_verification_schema.py  test_verifier.py
(+119 files in other folders)
